syntax = "proto3";

package spine.validation.test;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.test";
option java_outer_classname = "WeatherProto";
option java_multiple_files = true;

message Cloud {

    int32 cubic_meters = 1 [(min).value = "1", (min).exclusive = true];
}
